fixed width screws up slider alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -244,7 +244,6 @@ POST/ARTICLE HEADERS
 	margin-left: auto !important;
 	margin-right: auto !important;
 	margin-bottom:0px !important;
-	width:970px !important;
 	opacity: 0.8;
 	background-color: black !important;
 }
